Made Sidebar collapsable. Picture is a circle now, but size is not correct.

--- a/scr/Lab 4 + 5/style.css
+++ b/scr/Lab 4 + 5/style.css
@@ -5,10 +5,20 @@ aside{
     margin-right: 15px;
     float: left;
     z-index: 1;
+    top: 0;
+    left: 0;
     background-color: lightgrey;
     overflow-x: hidden;
     transition: .05s;
     /* text-wrap: ; */
+}
+picture{
+    border-radius: 50%;
+    height: 200px;
+    width: auto;
+}
+img{
+    border-radius: 50%;
 }
 .sidenav .closebtn {
     position: absolute;
